[package]
name = "pyesb_amqp"
version = "0.0.1"
edition = "2024"

[lib]
name = "pyesb_amqp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
fe2o3-amqp = { git = "https://github.com/grevinden/fe2o3-amqp.git", features = ["acceptor", "tracing"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
hex = "0.4"
